# sms_ponto_consulta

./: .env  .env_dev  .gitignore  026.930.289-14.xlsx  056.878.214-30.xlsx  Dockerfile  README.md  docker-compose.yml  main.py  main_.py  package-lock.json  package.json  pyproject.toml  requirements.txt  run_streamlit.py  setup.py  start_streamlit.py  test.py
services/: authenticate.py  test.py
utils/: excel.py  extractor_data.py  extrator_data.py  format_excel.py  utils.py
