[tool.poetry]
name = "sms-ponto-consulta"
version = "0.1.0"
description = ""
authors = ["Paulo Roberto De Morais <prmorais1302@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
selenium = "^4.22.0"
lxml = "^5.2.2"
openpyxl = "^3.1.5"
xlsxwriter = "^3.2.0"
html5lib = "^1.1"
cx-freeze = "^7.2.0"
python-dotenv = "^1.0.1"
beautifulsoup4 = "^4.12.3"
streamlit = "^1.36.0"
bs4 = "^0.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
