[tool.poetry]
name = "sms-ponto-consulta"
version = "0.1.0"
description = ""
authors = ["Paulo Roberto De Morais <prmorais1302@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
selenium = "^4.22.0"
xlsxwriter = "^3.2.0"
cx-freeze = "^7.2.0"
python-dotenv = "^1.0.1"
streamlit = "^1.36.0"
bs4 = "^0.0.2"
lxml = "^5.2.2"
psutil = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
